# agentic-ai-prototypes

./: .gitignore  README.md  ROADMAP.md
hcm-self-service-assistant/: .env.example  .gitignore  CLAUDE.md  README.md  employee_directory.csv  employee_leave_balances.csv  hr_policies.csv  leave_requests.csv  main.py  pyproject.toml  streamlit_app.py  training_enrollments.csv  training_sessions.csv
hcm-self-service-assistant/hcm_agent/: __init__.py  logging_config.py  utils.py
hcm-self-service-assistant/hcm_agent/config/: settings.py
hcm-self-service-assistant/hcm_agent/models/: state.py
hcm-self-service-assistant/hcm_agent/tools/: employee_tools.py  leave_reader.py  leave_writer.py  policy_tools.py  training_tools.py
hcm-self-service-assistant/hcm_agent/workflows/: graph.py
