[project]
name = "hcm-self-service-assistant"
version = "0.1.0"
description = "AI-powered HR Self-Service Assistant for HCM domain using LangGraph multi-agent architecture"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.0.0",
    "streamlit>=1.35.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hcm_agent"]
